--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-read-more-read-less": "^1.0.7",
     "react-router-dom": "^7.7.1",
     "tailwindcss": "^4.1.11"
   },
